JumpScript/tests/baselines/reference/generatorTypeCheck60.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck60.jump(2,22): error TS1163: A 'yield' expression is only allowed in a generator body.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck60.jump (1 errors) ====
    function* g() {
        class C extends (yield) {};
                         ~~~~~
!!! error TS1163: A 'yield' expression is only allowed in a generator body.
    }